{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 8,
  "lineage": "b8cddfa2-8f48-9059-69be-3a6b8bf0827a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.233.215.3",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-16T04:31:18.208-07:00",
            "id": "projects/winged-ratio-399207/regions/us-west1/addresses/ipv4-address",
            "name": "ipv4-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "winged-ratio-399207",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/regions/us-west1/addresses/ipv4-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "4001"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-16T04:31:28.053-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/winged-ratio-399207/global/firewalls/allow-access-to-exch-api",
            "log_config": [],
            "name": "allow-access-to-exch-api",
            "network": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management",
            "priority": 1000,
            "project": "winged-ratio-399207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/firewalls/allow-access-to-exch-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "exch-api"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_access_to_websocket",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-16T04:31:28.015-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/winged-ratio-399207/global/firewalls/allow-access-to-websocket",
            "log_config": [],
            "name": "allow-access-to-websocket",
            "network": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management",
            "priority": 1000,
            "project": "winged-ratio-399207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/firewalls/allow-access-to-websocket",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "exch-websocket"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_to_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-16T04:31:28.052-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/winged-ratio-399207/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management",
            "priority": 1000,
            "project": "winged-ratio-399207",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh-allowed"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/images/exch-2023-09-16",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/zones/us-west1-b/disks/worker-machine"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/winged-ratio-399207/zones/us-west1-b/instances/worker-machine",
            "instance_id": "696917893566704847",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "exch:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCsF/INDWVeap/GlXqwN4dexmTdTxLe+d1Om5ci31MfZPdqSiX2A8jrkqtUq8Ul3mdfrHxCD7/Fl24m/PUoQwZ7leUgfqpKP6Yh8IpaDDhmQCP0AkZITq3efh43rjtqMdW7F6Vakjo0pRWUa+NiOCBIJbGnXj507jgE+8DkKftmAR2o/Y/H1FJtQ+8wg+qkcOh47Cu1tiX+PR46y2eSAeTjf9SOd5CtwuLqfqy3PieiPxcBI/x+OsC4Qfa+nlRN1DQ9ZD7jC0XMKL5UQGRlbNdVxnYfXqZRK4n/u2xWwEOchJWYyfcPf7Q5OXvtXE9/119Bu60BvIjL4JD/DtS8/p14jv3ff9gX9i4XSA9Cydp9j5e8ySm86N3KRV7F+xioyxWSByNXUMqQ7LY+2NrDIu35NWwpPd5y9ktIKY8ebhST4y/r [...]
            },
            "metadata_fingerprint": "_ydd1IVBK00=",
            "name": "worker-machine",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.233.215.3",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/regions/us-west1/subnetworks/public-10-0-1-0",
                "subnetwork_project": "winged-ratio-399207"
              }
            ],
            "project": "winged-ratio-399207",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/zones/us-west1-b/instances/worker-machine",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "exch-api",
              "exch-websocket",
              "ssh-allowed"
            ],
            "tags_fingerprint": "9ZcgLvEGMu0=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_network.management",
            "google_compute_subnetwork.public_subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/winged-ratio-399207/global/networks/management",
            "mtu": 0,
            "name": "management",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "winged-ratio-399207",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-16T04:31:29.431-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/winged-ratio-399207/regions/us-west1/subnetworks/public-10-0-1-0",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-10-0-1-0",
            "network": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/global/networks/management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "winged-ratio-399207",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/winged-ratio-399207/regions/us-west1/subnetworks/public-10-0-1-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.management"
          ]
        }
      ]
    }
  ]
}